<resources>
    <string name="app_name">Animee</string>
    <string name="label_star">星座</string>
    <string name="label_partner">配对</string>
    <string name="label_luck">运势</string>
    <string name="label_mine">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="starDetail">星座详情</string>
    <string name="man">男生</string>
    <string name="woman">女生</string>
    <string name="partner_info">分别先您的星座和对方的星座，点击配对分析</string>
    <string name="partner_frag_btn_prize">每日抽奖</string>
    <string name="partner_frag_btn_analysis">开始配对分析</string>
    <string name="luckFragName">综合运势</string>
    <string name="meUpdateLog">更新日志</string>
    <string name="meFunctionIntro">功能介绍</string>
    <string name="aboutApp">关于应用</string>
    <string name="feedBack">反馈问题</string>
</resources>