<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/main_tv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/app_name"
        android:background="@color/lightYellow"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/lightPink"
        />
<!--    中间部分使用布局进行占位-->
    <LinearLayout
        android:id="@+id/main_layout_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_rg"
        android:layout_below="@id/main_tv_title"
        android:orientation="vertical">

    </LinearLayout>
    <RadioGroup
        android:id="@+id/main_rg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/lightYellow"
        android:layout_alignParentBottom="true"
        android:padding="5dp">
        <RadioButton
            android:id="@+id/main_rb_star"
            android:drawableTop="@drawable/main_rb_star"
            style="@style/main_rb"
            android:text="@string/label_star"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/main_rb_partner"
            android:drawableTop="@drawable/main_rb_partner"
            style="@style/main_rb"
            android:text="@string/label_partner"
            android:checked="false"/>
        <RadioButton
            android:id="@+id/main_rb_luck"
            android:drawableTop="@drawable/main_rb_luck"
            style="@style/main_rb"
            android:text="@string/label_luck"
            android:checked="false"/>
        <RadioButton
            android:id="@+id/main_rb_mine"
            android:drawableTop="@drawable/main_rb_mine"
            style="@style/main_rb"
            android:text="@string/label_mine"
            android:checked="false"/>
    </RadioGroup>

</RelativeLayout>
