<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/bgYellow"
    android:orientation="vertical"
    tools:context=".PartnerFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/partner_man">
        <TextView
            android:id="@+id/partner_frag_tv_man"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/man"/>
        <ImageView
            android:id="@+id/partner_frag_iv_man"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp" />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:id="@+id/partner_frag_sp_man"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/partner_woman">
        <TextView
            android:id="@+id/partner_frag_tv_woman"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/woman"/>
        <ImageView
            android:id="@+id/partner_frag_iv_woman"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:id="@+id/partner_frag_sp_woman"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/partner_info"
        />
    <Button
        android:id="@+id/partner_frag_btn_prize"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:text="@string/partner_frag_btn_prize"
        android:background="@drawable/dock"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/partner_frag_btn_analysis"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/partner_frag_btn_analysis"
        android:background="@drawable/dock"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>