<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgYellow"
    android:orientation="vertical"
    tools:context=".MineFragment">

    <!-- TODO: Update blank fragment layout -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/me_frag_civ"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        app:civ_border_color="@color/lightRed"
        app:civ_border_width="2dp"/>
    <TextView
        android:id="@+id/me_frag_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="白羊座"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <View
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:background="@color/darkGreen"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/aboutApp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <View
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:background="@color/darkGreen"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/meFunctionIntro"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <View
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:background="@color/darkGreen"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/meUpdateLog"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <View
            android:layout_width="5dp"
            android:layout_height="30dp"
            android:background="@color/darkGreen"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/feedBack"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginLeft="20dp"/>
</LinearLayout>